[package]
name = "net-spider"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
nb = "1.1.0"
panic-halt = "1.0.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.12.0", features = ["rt", "critical-section-impl"] }

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
